test/compiler_errors/indirect-circular-include.lzx
<canvas>
  <include href="includes/indirect-circular-include-b.lzx"/>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2004 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
</canvas>
